--- a/Hotel/HotelManagementSytem/Views/_ViewImports.cshtml
+++ b/Hotel/HotelManagementSytem/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using HotelManagementSytem
 @using HotelManagementSytem.Models
+@using WhiteLagoon.Domain.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
