8th Commit ViewBeg, ViewData

--- a/Hotel/HotelManagementSytem/Views/_ViewImports.cshtml
+++ b/Hotel/HotelManagementSytem/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using HotelManagementSytem
 @using HotelManagementSytem.Models
 @using WhiteLagoon.Domain.Entities
+@using HotelManagementSytem.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
