--- a/Hotel/HotelManagementSytem/Views/VillaNumber/Index.cshtml
+++ b/Hotel/HotelManagementSytem/Views/VillaNumber/Index.cshtml
@@ -28,19 +28,18 @@
             </thead>
             <tbody>
                 @foreach (var obj in Model)
-
                 {
                     <tr>
-                        <td>@obj.VillaId</td>
+                        <td>@obj.Villa.Name</td>
                         <td>@obj.Villa_Number</td>
                         <td>@obj.SpecialDetails</td>
                         <td>
                             <div class="w-75 btn-group" role="group">
-                                <a asp-controller="VillaNumber" asp-action="Update" asp-route-villaId="@obj.Villa_Number"
+                                <a asp-controller="VillaNumber" asp-action="Update" asp-route-villaNumberId="@obj.Villa_Number"
                                    class="btn btn-success mx-2">
                                     <i class="bi bi-pencil-square"></i> Edit
                                 </a>
-                                <a asp-controller="VillaNumber" asp-action="Delete" asp-route-villaId="@obj.Villa_Number"
+                                <a asp-controller="VillaNumber" asp-action="Delete" asp-route-villaNumberId="@obj.Villa_Number"
                                    class="btn btn-danger mx-2">
                                     <i class="bi bi-trash-fill"></i> Delete
                                 </a>
